[package]
name = "bitnet-crossval"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
description = "Cross-validation framework for BitNet Rust vs C++ implementations"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = []
crossval = ["dep:bindgen", "dep:cc", "dep:bitnet-sys", "bitnet-sys/ffi", "bitnet-inference/ffi", "ffi"]
ffi = ["dep:cc", "bitnet-inference/ffi"]
iq2s-ffi = ["bitnet-models/iq2s-ffi", "bitnet-ggml-ffi/iq2s-ffi"]
cpp-probe = []
integration-tests = []
cpu = ["bitnet-inference/cpu", "bitnet-models/cpu"]
gpu = ["bitnet-inference/gpu", "bitnet-models/gpu"]

[dependencies]
# Core dependencies (always available)
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
thiserror = "2.0.17"
chrono = { version = "0.4.42", features = ["serde"] }
toml = "0.9.8"

# Cross-validation specific dependencies (feature-gated)
bindgen = { version = "0.72.1", optional = true }
cc = { version = "1.2.41", optional = true }
bitnet-sys = { path = "../crates/bitnet-sys", optional = true }

# Internal crates for testing
bitnet-inference = { path = "../crates/bitnet-inference" }
bitnet-models = { path = "../crates/bitnet-models" }
bitnet-common = { path = "../crates/bitnet-common" }
bitnet-tokenizers = { path = "../crates/bitnet-tokenizers", features = ["spm"] }
bitnet-ggml-ffi = { path = "../crates/bitnet-ggml-ffi" }
scopeguard = "1.2.0"
dirs = "6.0.0"
humantime = "2.3.0"
tokio = { version = "1.48.0", features = ["full"] }
sha2 = "0.10.9"  # For model SHA256 computation in parity receipts
blake3 = "1.8.2"  # For prompt hashing in parity forensics

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
tempfile = "3.23.0"
rand = "0.9.2"
bitnet-tokenizers = { path = "../crates/bitnet-tokenizers" }
half = "2.7.1"

[[bench]]
name = "performance"
harness = false
required-features = ["crossval"]

[[test]]
name = "ffi_integration"
path = "tests/ffi_integration.rs"
required-features = ["ffi"]

[[test]]
name = "token_equivalence"
path = "tests/token_equivalence.rs"
required-features = ["ffi"]

[[test]]
name = "performance_validation"
path = "tests/performance_validation.rs"
required-features = ["ffi"]

[[test]]
name = "iq2s_validation"
path = "tests/iq2s_validation.rs"
required-features = ["iq2s-ffi"]

[[test]]
name = "parity_bitnetcpp"
path = "tests/parity_bitnetcpp.rs"
required-features = ["crossval", "integration-tests"]

[build-dependencies]
bindgen = { version = "0.72.1", optional = true }
cc = { version = "1.2.41", optional = true }

[package.metadata.docs.rs]
features = ["crossval"]
