[package]
name = "bitnet-crossval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Cross-validation framework for BitNet Rust vs C++ implementations"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = []
# llama-ffi: llama.cpp cross-validation (no bitnet-sys dependency)
llama-ffi = ["dep:cc"]
# bitnet-ffi: bitnet.cpp cross-validation (requires bitnet-sys)
bitnet-ffi = ["dep:cc", "dep:bitnet-sys", "bitnet-inference/ffi"]
# crossval: full cross-validation with both backends
crossval = ["dep:bindgen", "dep:cc", "dep:bitnet-sys", "bitnet-inference/ffi", "bitnet-ffi"]
# ffi: legacy alias for bitnet-ffi (backward compatibility)
ffi = ["bitnet-ffi"]
iq2s-ffi = ["bitnet-models/iq2s-ffi", "bitnet-ggml-ffi/iq2s-ffi"]
cpp-probe = []
integration-tests = []
cpu = ["bitnet-inference/cpu", "bitnet-models/cpu"]
gpu = ["bitnet-inference/gpu", "bitnet-models/gpu"]

[dependencies]
# Core dependencies (always available)
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror = "2.0.17"
chrono = { workspace = true, features = ["serde"] }
toml.workspace = true

# Cross-validation specific dependencies (feature-gated)
bindgen = { version = "0.72.1", optional = true }
cc = { version = "1.2.46", optional = true }
# bitnet-sys is needed for bitnet.cpp cross-validation (enabled via bitnet-ffi)
bitnet-sys = { path = "../crates/bitnet-sys", version = "0.2.0-alpha.1", optional = true }

# Internal crates for testing
bitnet-inference = { path = "../crates/bitnet-inference", version = "0.2.0-alpha.1" }
bitnet-models = { path = "../crates/bitnet-models", version = "0.2.0-alpha.1" }
bitnet-common = { path = "../crates/bitnet-common", version = "0.2.0-alpha.1" }
bitnet-tokenizers = { path = "../crates/bitnet-tokenizers", version = "0.2.0-alpha.1", features = ["spm"] }
bitnet-ggml-ffi = { path = "../crates/bitnet-ggml-ffi", version = "0.2.0-alpha.1" }
scopeguard = "1.2.0"
dirs = "6.0.0"
humantime = "2.3.0"
tokio = { version = "1.48.0", features = ["full"] }
sha2 = "0.10.9"  # For model SHA256 computation in parity receipts
blake3 = "1.8.2"  # For prompt hashing in parity forensics
console = "0.16.1"  # For colored error messages in token parity

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
tempfile = "3.23.0"
rand = "0.9.2"
bitnet-tokenizers = { path = "../crates/bitnet-tokenizers", version = "0.2.0-alpha.1" }
half = "2.7.1"
serial_test = "3.2.0"

[[bench]]
name = "performance"
harness = false
required-features = ["crossval"]

[[test]]
name = "ffi_integration"
path = "tests/ffi_integration.rs"
required-features = ["ffi"]

[[test]]
name = "token_equivalence"
path = "tests/token_equivalence.rs"
required-features = ["ffi"]

[[test]]
name = "performance_validation"
path = "tests/performance_validation.rs"
required-features = ["ffi"]

[[test]]
name = "iq2s_validation"
path = "tests/iq2s_validation.rs"
required-features = ["iq2s-ffi"]

[[test]]
name = "parity_bitnetcpp"
path = "tests/parity_bitnetcpp.rs"
required-features = ["crossval", "integration-tests"]

[[test]]
name = "cpp_wrapper_smoke_test"
path = "tests/cpp_wrapper_smoke_test.rs"
required-features = ["ffi"]

[[test]]
name = "ffi_socket_tests"
path = "tests/ffi_socket_tests.rs"
required-features = ["ffi"]

[[test]]
name = "ffi_integration_tests"
path = "tests/ffi_integration_tests.rs"
required-features = ["ffi"]

[[test]]
name = "ffi_error_tests"
path = "tests/ffi_error_tests.rs"
required-features = ["ffi"]

[[test]]
name = "ffi_fallback_tests"
path = "tests/ffi_fallback_tests.rs"
required-features = ["ffi"]

[[test]]
name = "cpp_wrapper_null_vocab_tests"
path = "tests/cpp_wrapper_null_vocab_tests.rs"
required-features = ["ffi"]

[[test]]
name = "kv_position_tracking_tests"
path = "tests/kv_position_tracking_tests.rs"
required-features = ["crossval"]

[[example]]
name = "test_llama_ffi"
required-features = ["ffi"]

[build-dependencies]
bindgen = { version = "0.72.1", optional = true }
cc = { version = "1.2.46", optional = true }

[package.metadata.docs.rs]
features = ["crossval"]
