[package]
name = "bitnet-fuzz"
version = "0.0.0"
publish = false
edition.workspace = true
license = "MIT OR Apache-2.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.10"
serde_json = "1.0.145"
safetensors = "0.6.2"
tempfile = "3"
bitnet-quantization = { path = "../crates/bitnet-quantization", version = "0.2.0-alpha.1" }
bitnet-models = { path = "../crates/bitnet-models", version = "0.2.0-alpha.1" }
bitnet-kernels = { path = "../crates/bitnet-kernels", version = "0.2.0-alpha.1" }
bitnet-common = { path = "../crates/bitnet-common", version = "0.2.0-alpha.1" }
bitnet-gguf = { path = "../crates/bitnet-gguf", version = "0.2.0-alpha.1" }
bitnet-st2gguf = { path = "../crates/bitnet-st2gguf", version = "0.2.0-alpha.1" }
bitnet-tokenizers = { path = "../crates/bitnet-tokenizers", version = "0.2.0-alpha.1" }
bitnet-logits = { path = "../crates/bitnet-logits", version = "0.2.0-alpha.1" }
bitnet-generation = { path = "../crates/bitnet-generation", version = "0.2.0-alpha.1" }
bitnet-rope = { path = "../crates/bitnet-rope", version = "0.2.0-alpha.1" }
bitnet-sampling = { path = "../crates/bitnet-sampling", version = "0.2.0-alpha.1" }
bitnet-receipts = { path = "../crates/bitnet-receipts", version = "0.2.0-alpha.1" }
bitnet-prompt-templates = { path = "../crates/bitnet-prompt-templates", version = "0.2.0-alpha.1" }
bitnet-validation = { path = "../crates/bitnet-validation", version = "0.2.0-alpha.1" }
bitnet-engine-core = { path = "../crates/bitnet-engine-core", version = "0.2.0-alpha.1" }
bitnet-honest-compute = { path = "../crates/bitnet-honest-compute", version = "0.2.0-alpha.1" }
bitnet-bdd-grid-core = { path = "../crates/bitnet-bdd-grid-core", version = "0.2.0-alpha.1" }
bitnet-runtime-feature-flags-core = { path = "../crates/bitnet-runtime-feature-flags-core", version = "0.2.0-alpha.1" }
bitnet-inference = { path = "../crates/bitnet-inference", version = "0.2.0-alpha.1" }
bitnet-server = { path = "../crates/bitnet-server", version = "0.2.0-alpha.1" }
bitnet-cli = { path = "../crates/bitnet-cli", version = "0.2.0-alpha.1" }
candle-core = { workspace = true }
arbitrary = { version = "1.4.2", features = ["derive"] }
toml = "0.8"

[[bin]]
name = "quantization_i2s"
path = "fuzz_targets/quantization_i2s.rs"
test = false
doc = false

[[bin]]
name = "quantization_tl1"
path = "fuzz_targets/quantization_tl1.rs"
test = false
doc = false

[[bin]]
name = "quantization_tl2"
path = "fuzz_targets/quantization_tl2.rs"
test = false
doc = false

[[bin]]
name = "gguf_parser"
path = "fuzz_targets/gguf_parser.rs"
test = false
doc = false

[[bin]]
name = "gguf_header"
path = "fuzz_targets/gguf_header.rs"
test = false
doc = false

[[bin]]
name = "safetensors_parser"
path = "fuzz_targets/safetensors_parser.rs"
test = false
doc = false

[[bin]]
name = "safetensors_metadata"
path = "fuzz_targets/safetensors_metadata.rs"
test = false
doc = false

[[bin]]
name = "kernel_matmul"
path = "fuzz_targets/kernel_matmul.rs"
test = false
doc = false

[[bin]]
name = "architecture_detection"
path = "fuzz_targets/architecture_detection.rs"
test = false
doc = false

[[bin]]
name = "tl_lut_helper"
path = "fuzz_targets/tl_lut_helper.rs"
test = false
doc = false

[[bin]]
name = "tokenizer_discovery"
path = "fuzz_targets/tokenizer_discovery.rs"
test = false
doc = false

[[bin]]
name = "vocab_size_extraction"
path = "fuzz_targets/vocab_size_extraction.rs"
test = false
doc = false

[[bin]]
name = "logits_transforms"
path = "fuzz_targets/logits_transforms.rs"
test = false
doc = false

[[bin]]
name = "generation_stop_check"
path = "fuzz_targets/generation_stop_check.rs"
test = false
doc = false

[[bin]]
name = "generation_stop_checker"
path = "fuzz_targets/generation_stop_checker.rs"
test = false
doc = false

[[bin]]
name = "rope_table_gen"
path = "fuzz_targets/rope_table_gen.rs"
test = false
doc = false

[[bin]]
name = "tokenizer_encode"
path = "fuzz_targets/tokenizer_encode.rs"
test = false
doc = false

[[bin]]
name = "gguf_metadata_values"
path = "fuzz_targets/gguf_metadata_values.rs"
test = false
doc = false

[[bin]]
name = "tokenizer_encode_decode"
path = "fuzz_targets/tokenizer_encode_decode.rs"
test = false
doc = false

[[bin]]
name = "quantization_input"
path = "fuzz_targets/quantization_input.rs"
test = false
doc = false

[[bin]]
name = "transformer_config"
path = "fuzz_targets/transformer_config.rs"
test = false
doc = false

[[bin]]
name = "gguf_kv_read"
path = "fuzz_targets/gguf_kv_read.rs"
test = false
doc = false

[[bin]]
name = "gguf_header_roundtrip"
path = "fuzz_targets/gguf_header_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "gguf_header_parse"
path = "fuzz_targets/gguf_header_parse.rs"
test = false
doc = false

[[bin]]
name = "sampling_no_panic"
path = "fuzz_targets/sampling_no_panic.rs"
test = false
doc = false

[[bin]]
name = "receipt_json_roundtrip"
path = "fuzz_targets/receipt_json_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "prompt_template_no_panic"
path = "fuzz_targets/prompt_template_no_panic.rs"
test = false
doc = false

[[bin]]
name = "gguf_writer_roundtrip"
path = "fuzz_targets/gguf_writer_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "tokenizer_encode_no_panic"
path = "fuzz_targets/tokenizer_encode_no_panic.rs"
test = false
doc = false

[[bin]]
name = "validation_no_panic"
path = "fuzz_targets/validation_no_panic.rs"
test = false
doc = false

[[bin]]
name = "engine_core_no_panic"
path = "fuzz_targets/engine_core_no_panic.rs"
test = false
doc = false

[[bin]]
name = "honest_compute_no_panic"
path = "fuzz_targets/honest_compute_no_panic.rs"
test = false
doc = false

[[bin]]
name = "runtime_context_parse_no_panic"
path = "fuzz_targets/runtime_context_parse_no_panic.rs"
test = false
doc = false

[[bin]]
name = "feature_activation_no_panic"
path = "fuzz_targets/feature_activation_no_panic.rs"
test = false
doc = false

[[bin]]
name = "kernel_dispatch"
path = "fuzz_targets/kernel_dispatch.rs"
test = false
doc = false

[[bin]]
name = "kv_cache_ops"
path = "fuzz_targets/kv_cache_ops.rs"
test = false
doc = false

[[bin]]
name = "model_config_parse"
path = "fuzz_targets/model_config_parse.rs"
test = false
doc = false

[[bin]]
name = "sampling_temperature"
path = "fuzz_targets/sampling_temperature.rs"
test = false
doc = false

[[bin]]
name = "tensor_shape_validate"
path = "fuzz_targets/tensor_shape_validate.rs"
test = false
doc = false

[[bin]]
name = "gguf_tensor_info"
path = "fuzz_targets/gguf_tensor_info.rs"
test = false
doc = false

[[bin]]
name = "prompt_template"
path = "fuzz_targets/prompt_template.rs"
test = false
doc = false

[[bin]]
name = "stop_sequence"
path = "fuzz_targets/stop_sequence.rs"
test = false
doc = false

[[bin]]
name = "model_config_validation"
path = "fuzz_targets/model_config_validation.rs"
test = false
doc = false

[[bin]]
name = "token_id_bounds"
path = "fuzz_targets/token_id_bounds.rs"
test = false
doc = false

[[bin]]
name = "gpu_hal_types"
path = "fuzz_targets/gpu_hal_types.rs"
test = false
doc = false

[[bin]]
name = "server_request_parse"
path = "fuzz_targets/server_request_parse.rs"
test = false
doc = false

[[bin]]
name = "cli_config_parse"
path = "fuzz_targets/cli_config_parse.rs"
test = false
doc = false

[[bin]]
name = "gguf_metadata_validate"
path = "fuzz_targets/gguf_metadata_validate.rs"
test = false
doc = false

[[bin]]
name = "quantization_config_validate"
path = "fuzz_targets/quantization_config_validate.rs"
test = false
doc = false

[[bin]]
name = "attention_mask_gen"
path = "fuzz_targets/attention_mask_gen.rs"
test = false
doc = false

[[bin]]
name = "kv_cache_eviction"
path = "fuzz_targets/kv_cache_eviction.rs"
test = false
doc = false
