[package]
name = "bitnet-fuzz"
version = "0.0.0"
publish = false
edition.workspace = true
license = "MIT OR Apache-2.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.10"
serde_json = "1.0.145"
safetensors = "0.6.2"
tempfile = "3"
bitnet-quantization = { path = "../crates/bitnet-quantization", version = "0.2.1-dev" }
bitnet-models = { path = "../crates/bitnet-models", version = "0.2.1-dev" }
bitnet-kernels = { path = "../crates/bitnet-kernels", version = "0.2.1-dev" }
bitnet-common = { path = "../crates/bitnet-common", version = "0.2.1-dev" }
bitnet-gguf = { path = "../crates/bitnet-gguf", version = "0.2.1-dev" }
bitnet-st2gguf = { path = "../crates/bitnet-st2gguf", version = "0.2.1-dev" }
bitnet-tokenizers = { path = "../crates/bitnet-tokenizers", version = "0.2.1-dev" }
bitnet-logits = { path = "../crates/bitnet-logits", version = "0.2.1-dev" }
bitnet-generation = { path = "../crates/bitnet-generation", version = "0.2.1-dev" }
bitnet-rope = { path = "../crates/bitnet-rope", version = "0.2.1-dev" }
bitnet-sampling = { path = "../crates/bitnet-sampling", version = "0.2.1-dev" }
bitnet-receipts = { path = "../crates/bitnet-receipts", version = "0.2.1-dev" }
bitnet-prompt-templates = { path = "../crates/bitnet-prompt-templates", version = "0.2.1-dev" }
bitnet-validation = { path = "../crates/bitnet-validation", version = "0.2.1-dev" }
bitnet-engine-core = { path = "../crates/bitnet-engine-core", version = "0.2.1-dev" }
bitnet-inference = { path = "../crates/bitnet-inference", version = "0.2.1-dev" }
bitnet-honest-compute = { path = "../crates/bitnet-honest-compute", version = "0.2.1-dev" }
bitnet-bdd-grid-core = { path = "../crates/bitnet-bdd-grid-core", version = "0.2.1-dev" }
bitnet-runtime-feature-flags-core = { path = "../crates/bitnet-runtime-feature-flags-core", version = "0.2.1-dev" }
candle-core = { workspace = true }
arbitrary = { version = "1.4.2", features = ["derive"] }

[[bin]]
name = "quantization_i2s"
path = "fuzz_targets/quantization_i2s.rs"
test = false
doc = false

[[bin]]
name = "quantization_tl1"
path = "fuzz_targets/quantization_tl1.rs"
test = false
doc = false

[[bin]]
name = "quantization_tl2"
path = "fuzz_targets/quantization_tl2.rs"
test = false
doc = false

[[bin]]
name = "gguf_parser"
path = "fuzz_targets/gguf_parser.rs"
test = false
doc = false

[[bin]]
name = "gguf_header"
path = "fuzz_targets/gguf_header.rs"
test = false
doc = false

[[bin]]
name = "safetensors_parser"
path = "fuzz_targets/safetensors_parser.rs"
test = false
doc = false

[[bin]]
name = "safetensors_metadata"
path = "fuzz_targets/safetensors_metadata.rs"
test = false
doc = false

[[bin]]
name = "kernel_matmul"
path = "fuzz_targets/kernel_matmul.rs"
test = false
doc = false

[[bin]]
name = "architecture_detection"
path = "fuzz_targets/architecture_detection.rs"
test = false
doc = false

[[bin]]
name = "tl_lut_helper"
path = "fuzz_targets/tl_lut_helper.rs"
test = false
doc = false

[[bin]]
name = "tokenizer_discovery"
path = "fuzz_targets/tokenizer_discovery.rs"
test = false
doc = false

[[bin]]
name = "vocab_size_extraction"
path = "fuzz_targets/vocab_size_extraction.rs"
test = false
doc = false

[[bin]]
name = "logits_transforms"
path = "fuzz_targets/logits_transforms.rs"
test = false
doc = false

[[bin]]
name = "generation_stop_check"
path = "fuzz_targets/generation_stop_check.rs"
test = false
doc = false

[[bin]]
name = "generation_stop_checker"
path = "fuzz_targets/generation_stop_checker.rs"
test = false
doc = false

[[bin]]
name = "rope_table_gen"
path = "fuzz_targets/rope_table_gen.rs"
test = false
doc = false

[[bin]]
name = "tokenizer_encode"
path = "fuzz_targets/tokenizer_encode.rs"
test = false
doc = false

[[bin]]
name = "gguf_metadata_values"
path = "fuzz_targets/gguf_metadata_values.rs"
test = false
doc = false

[[bin]]
name = "tokenizer_encode_decode"
path = "fuzz_targets/tokenizer_encode_decode.rs"
test = false
doc = false

[[bin]]
name = "quantization_input"
path = "fuzz_targets/quantization_input.rs"
test = false
doc = false

[[bin]]
name = "transformer_config"
path = "fuzz_targets/transformer_config.rs"
test = false
doc = false

[[bin]]
name = "gguf_kv_read"
path = "fuzz_targets/gguf_kv_read.rs"
test = false
doc = false

[[bin]]
name = "gguf_header_roundtrip"
path = "fuzz_targets/gguf_header_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "gguf_header_parse"
path = "fuzz_targets/gguf_header_parse.rs"
test = false
doc = false

[[bin]]
name = "sampling_no_panic"
path = "fuzz_targets/sampling_no_panic.rs"
test = false
doc = false

[[bin]]
name = "receipt_json_roundtrip"
path = "fuzz_targets/receipt_json_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "prompt_template_no_panic"
path = "fuzz_targets/prompt_template_no_panic.rs"
test = false
doc = false

[[bin]]
name = "gguf_writer_roundtrip"
path = "fuzz_targets/gguf_writer_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "tokenizer_encode_no_panic"
path = "fuzz_targets/tokenizer_encode_no_panic.rs"
test = false
doc = false

[[bin]]
name = "validation_no_panic"
path = "fuzz_targets/validation_no_panic.rs"
test = false
doc = false

[[bin]]
name = "engine_core_no_panic"
path = "fuzz_targets/engine_core_no_panic.rs"
test = false
doc = false

[[bin]]
name = "honest_compute_no_panic"
path = "fuzz_targets/honest_compute_no_panic.rs"
test = false
doc = false

[[bin]]
name = "runtime_context_parse_no_panic"
path = "fuzz_targets/runtime_context_parse_no_panic.rs"
test = false
doc = false

[[bin]]
name = "feature_activation_no_panic"
path = "fuzz_targets/feature_activation_no_panic.rs"
test = false
doc = false

[[bin]]
name = "kernel_dispatch"
path = "fuzz_targets/kernel_dispatch.rs"
test = false
doc = false

[[bin]]
name = "kv_cache_ops"
path = "fuzz_targets/kv_cache_ops.rs"
test = false
doc = false

[[bin]]
name = "model_config_parse"
path = "fuzz_targets/model_config_parse.rs"
test = false
doc = false

[[bin]]
name = "sampling_temperature"
path = "fuzz_targets/sampling_temperature.rs"
test = false
doc = false

[[bin]]
name = "tensor_shape_validate"
path = "fuzz_targets/tensor_shape_validate.rs"
test = false
doc = false

[[bin]]
name = "opencl_ternary_pack"
path = "fuzz_targets/opencl_ternary_pack.rs"
test = false
doc = false

[[bin]]
name = "softmax_stability"
path = "fuzz_targets/softmax_stability.rs"
test = false
doc = false

[[bin]]
name = "device_opencl_construct"
path = "fuzz_targets/device_opencl_construct.rs"
test = false
doc = false

[[bin]]
name = "embedding_lookup"
path = "fuzz_targets/embedding_lookup.rs"
test = false
doc = false

[[bin]]
name = "pooling_dims"
path = "fuzz_targets/pooling_dims.rs"
test = false
doc = false

[[bin]]
name = "tensor_validation"
path = "fuzz_targets/tensor_validation.rs"
test = false
doc = false

[[bin]]
name = "config_validation"
path = "fuzz_targets/config_validation.rs"
test = false
doc = false

[[bin]]
name = "scatter_indices"
path = "fuzz_targets/scatter_indices.rs"
test = false
doc = false

[[bin]]
name = "memory_pool_alloc"
path = "fuzz_targets/memory_pool_alloc.rs"
test = false
doc = false

[[bin]]
name = "memory_layout"
path = "fuzz_targets/memory_layout.rs"
test = false
doc = false

[[bin]]
name = "conv1d_quantized"
path = "fuzz_targets/conv1d_quantized.rs"
test = false
doc = false

[[bin]]
name = "rope_extreme_positions"
path = "fuzz_targets/rope_extreme_positions.rs"
test = false
doc = false

[[bin]]
name = "pooling_ops"
path = "fuzz_targets/pooling_ops.rs"
test = false
doc = false
