[package]
description = "Comprehensive testing framework for BitNet.rs"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "bitnet-tests"
version = "0.1.0"

[lib]
name = "bitnet_tests"
path = "lib.rs"

[features]
# Keep integration OFF by default to unblock builds/tests focused on crossval
default = ["reporting", "fixtures", "trend"]
full-framework = ["reporting", "fixtures", "trend", "inference", "quantization"]
reporting = []
fixtures = []
trend = []
crossval = []
# Optional C++ implementation for cross-validation
cpp = []
# New: gate the integration suite
integration-tests = []
cpp-ffi = []
# Real model testing features
inference = ["bitnet-inference/cpu"]
quantization = []
gpu = ["bitnet-kernels/gpu", "bitnet-quantization/gpu"]

[[bin]]
name = "validate_config"
path = "bin/validate_config.rs"
required-features = ["fixtures"]

[[bin]]
name = "run_configuration_tests"
path = "run_configuration_tests.rs"
required-features = ["fixtures"]

[[bin]]
name = "generate_ci_report"
path = "bin/generate_ci_report.rs"
required-features = ["reporting"]

[[bin]]
name = "check_performance_regressions"
path = "bin/check_performance_regressions.rs"
required-features = ["fixtures"]

[[bin]]
name = "generate_trend_analysis"
path = "bin/generate_trend_analysis.rs"
required-features = ["trend", "reporting"]

[[bin]]
name = "ci_status_integration"
path = "bin/ci_status_integration.rs"
required-features = ["reporting", "fixtures"]


[[bin]]
name = "demo_reporting_comprehensive"
path = "bin/demo_reporting_comprehensive.rs"
required-features = ["reporting"]

[[bin]]
name = "demo_error_handling"
path = "demo_error_handling.rs"

[[bin]]
name = "demo_reporting_system"
path = "bin/demo_reporting_system.rs"
required-features = ["reporting"]

[[bin]]
name = "fast_feedback_simple_demo"
path = "bin/fast_feedback_simple_demo.rs"
required-features = ["fixtures"]

[[test]]
name = "test_logging_infrastructure"
path = "test_logging_infrastructure.rs"

[[test]]
name = "test_bitnet_implementation"
path = "test_bitnet_implementation.rs"

[[test]]
name = "test_reporting_minimal"
path = "test_reporting_minimal.rs"

[[test]]
name = "test_ci_reporting_simple"
path = "test_ci_reporting_simple.rs"

[[example]]
name = "reporting_example"
path = "examples/reporting_example.rs"

[dependencies]
# Async runtime and utilities
async-trait = "0.1.89"
futures-util = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }

# System information
num_cpus = "1.17.0"

# Serialization and configuration
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34-deprecated"
toml = "0.9.7"

# HTTP client for fixture downloads
reqwest = { version = "0.12.23", features = ["json", "stream"] }

# Cryptography for checksums
digest = "0.10.7"
sha2 = { version = "0.10.9", features = ["std"] }

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.16"

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# System utilities
regex = "1.11.2"
walkdir = "2.5.0"

# Testing utilities
env_logger = "0.11.8"
tempfile = "3.22.0"

# Random number generation
fastrand = "2.3.0"
rand = "0.9.2"

# Parallel processing
rayon = "1.11.0"

# Date and time utilities
chrono = { version = "0.4.42", features = ["serde"] }

# Command line argument parsing
clap = { version = "4.5.48", features = ["derive"] }

# HTML escaping for reports
html-escape = "0.2.13"

# XML generation for JUnit reports
xml-rs = "1.0.0"

# System interface for all platforms
libc = "0.2.175"

# Compression for cache
flate2 = "1.1.2"

# Coverage reporting
cargo_metadata = "0.22.0"

# File timestamp manipulation
filetime = "0.2.26"

# BitNet.rs crates for cross-validation
bitnet-common = { path = "../crates/bitnet-common" }
bitnet-inference = { path = "../crates/bitnet-inference", default-features = false, features = ["cpu", "rt-tokio"] }
bitnet-models = { path = "../crates/bitnet-models" }
bitnet-quantization = { path = "../crates/bitnet-quantization" }
bitnet-kernels = { path = "../crates/bitnet-kernels" }
bitnet-tokenizers = { path = "../crates/bitnet-tokenizers" }
bitnet-compat = { path = "../crates/bitnet-compat" }
bitnet = { path = "../", default-features = false, features = ["cpu"] }

# Additional dependencies for fixtures
bincode = "1.3.3"
byteorder = "1.5.0"

# Platform-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "psapi", "fileapi", "minwindef"] }

[dev-dependencies]
# Test helper dependencies
fastrand = "2.3.0"
filetime = "0.2.26"
html-escape = "0.2.13"
serde = { version = "1.0.225", features = ["derive"] }
libc = "0.2.175"
