[package]
description = "Comprehensive testing framework for bitnet-rs"
license = "MIT OR Apache-2.0"
name = "bitnet-tests"
version.workspace = true
edition.workspace = true
publish = false
# Disable automatic test/bench discovery - only explicitly declared sections will be compiled
autotests = false
autobenches = false

[lib]
name = "bitnet_tests"
path = "lib.rs"

[features]
# Keep integration OFF by default to unblock builds/tests focused on crossval
default = ["reporting", "fixtures", "trend"]
full-framework = ["reporting", "fixtures", "trend", "inference", "quantization"]
reporting = [
  "bitnet-testing-policy-tests/reporting",
]
fixtures = [
  "bitnet-testing-policy-tests/fixtures",
]
trend = [
  "bitnet-testing-policy-tests/trend",
]
crossval = [
  "bitnet-testing-policy-tests/crossval",
]
cpu = [
  "inference",
  "bitnet-testing-policy-tests/cpu",
]
# Optional C++ implementation for cross-validation
cpp = ["cpp-ffi"]
# New: gate the integration suite
integration-tests = [
  "bitnet-testing-policy-tests/integration-tests",
]
cpp-ffi = [
  "bitnet-testing-policy-tests/cpp-ffi",
]
# Real model testing features
inference = [
  "bitnet-inference/cpu",
  "bitnet-testing-policy-tests/inference",
]
quantization = [
  "bitnet-testing-policy-tests/quantization",
]
gpu = [
  "bitnet-kernels/gpu",
  "bitnet-quantization/gpu",
  "bitnet-testing-policy-tests/gpu",
]
cuda = [
  "bitnet-testing-policy-tests/cuda",
  "gpu",
]
kernels = [
  "bitnet-testing-policy-tests/kernels",
]
tokenizers = [
  "bitnet-testing-policy-tests/tokenizers",
]
cli = [
  "bitnet-testing-policy-tests/cli",
]
server = [
  "bitnet-testing-policy-tests/server",
]
ffi = [
  "bitnet-testing-policy-tests/ffi",
]
python = [
  "bitnet-testing-policy-tests/python",
]
wasm = [
  "bitnet-testing-policy-tests/wasm",
]
iq2s-ffi = [
  "bitnet-testing-policy-tests/iq2s-ffi",
]
trace = [
  "bitnet-testing-policy-tests/trace",
]
runtime-profile-cpu = [
  "bitnet-testing-policy-tests/runtime-profile-cpu",
]
runtime-profile-gpu = [
  "bitnet-testing-policy-tests/runtime-profile-gpu",
]
runtime-profile-cuda = [
  "bitnet-testing-policy-tests/runtime-profile-cuda",
]
runtime-profile-inference = [
  "bitnet-testing-policy-tests/runtime-profile-inference",
]
runtime-profile-kernels = [
  "bitnet-testing-policy-tests/runtime-profile-kernels",
]
runtime-profile-tokenizers = [
  "bitnet-testing-policy-tests/runtime-profile-tokenizers",
]
runtime-profile-quantization = [
  "bitnet-testing-policy-tests/runtime-profile-quantization",
]
runtime-profile-cli = [
  "bitnet-testing-policy-tests/runtime-profile-cli",
]
runtime-profile-server = [
  "bitnet-testing-policy-tests/runtime-profile-server",
]
runtime-profile-ffi = [
  "bitnet-testing-policy-tests/runtime-profile-ffi",
]
runtime-profile-python = [
  "bitnet-testing-policy-tests/runtime-profile-python",
]
runtime-profile-wasm = [
  "bitnet-testing-policy-tests/runtime-profile-wasm",
]
runtime-profile-crossval = [
  "bitnet-testing-policy-tests/runtime-profile-crossval",
]
runtime-profile-trace = [
  "bitnet-testing-policy-tests/runtime-profile-trace",
]
runtime-profile-iq2s-ffi = [
  "bitnet-testing-policy-tests/runtime-profile-iq2s-ffi",
]
runtime-profile-cpp-ffi = [
  "bitnet-testing-policy-tests/runtime-profile-cpp-ffi",
]
runtime-profile-fixtures = [
  "bitnet-testing-policy-tests/runtime-profile-fixtures",
]
runtime-profile-reporting = [
  "bitnet-testing-policy-tests/runtime-profile-reporting",
]
runtime-profile-trend = [
  "bitnet-testing-policy-tests/runtime-profile-trend",
]
runtime-profile-integration-tests = [
  "bitnet-testing-policy-tests/runtime-profile-integration-tests",
]

[[bin]]
name = "validate_config"
path = "bin/validate_config.rs"
required-features = ["fixtures"]

# [[bin]]
# name = "run_configuration_tests"
# path = "run_configuration_tests.rs"
# required-features = ["fixtures"]
# NOTE: Temporarily disabled - needs API updates

[[bin]]
name = "generate_ci_report"
path = "bin/generate_ci_report.rs"
required-features = ["reporting"]

# [[bin]]
# name = "check_performance_regressions"
# path = "bin/check_performance_regressions.rs"
# required-features = ["fixtures"]
# NOTE: Temporarily disabled - file exists as .bak

[[bin]]
name = "generate_trend_analysis"
path = "bin/generate_trend_analysis.rs"
required-features = ["trend", "reporting"]

[[bin]]
name = "ci_status_integration"
path = "bin/ci_status_integration.rs"
required-features = ["reporting", "fixtures"]


[[bin]]
name = "demo_reporting_comprehensive"
path = "bin/demo_reporting_comprehensive.rs"
required-features = ["reporting"]

# [[bin]]
# name = "demo_error_handling"
# path = "demo_error_handling.rs"
# NOTE: Temporarily disabled - needs API updates

[[bin]]
name = "demo_reporting_system"
path = "bin/demo_reporting_system.rs"
required-features = ["reporting"]

[[bin]]
name = "fast_feedback_simple_demo"
path = "bin/fast_feedback_simple_demo.rs"
required-features = ["fixtures"]

# [[test]]
# name = "test_logging_infrastructure"
# path = "test_logging_infrastructure.rs"
# NOTE: Temporarily disabled - needs API updates

# [[test]]
# name = "test_bitnet_implementation"
# path = "test_bitnet_implementation.rs"
# NOTE: Temporarily disabled - needs API updates

[[test]]
name = "test_reporting_minimal"
path = "test_reporting_minimal.rs"

[[test]]
name = "test_ci_reporting_simple"
path = "test_ci_reporting_simple.rs"

[[test]]
name = "issue_465_documentation_tests"
path = "issue_465_documentation_tests.rs"

[[test]]
name = "issue_465_baseline_tests"
path = "issue_465_baseline_tests.rs"

[[test]]
name = "issue_465_ci_gates_tests"
path = "issue_465_ci_gates_tests.rs"

[[test]]
name = "issue_465_release_qa_tests"
path = "issue_465_release_qa_tests.rs"

[[test]]
name = "env_guard_compliance"
path = "env_guard_compliance.rs"

[[test]]
name = "platform_tests"
path = "integration/platform_tests.rs"

[[test]]
name = "backward_compat_tests"
path = "backward_compat_tests.rs"

[[test]]
name = "test_support_tests"
path = "test_support_tests.rs"

[[test]]
name = "test_infrastructure_helpers_tests"
path = "test_infrastructure_helpers_tests.rs"

[[test]]
name = "workspace_quality_gates"
path = "workspace_quality_gates.rs"

[[test]]
name = "yaml_parsing_baseline"
path = "yaml_parsing_baseline.rs"
required-features = ["fixtures"]

[[test]]
name = "static_initialization_tests"
path = "static_initialization_tests.rs"

[[test]]
name = "multi_crate_tests"
path = "integration/multi_crate_tests.rs"

[[example]]
name = "reporting_example"
path = "examples/reporting_example.rs"

[dependencies]
# Async runtime and utilities
async-trait = "0.1.89"
futures-util = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
bitnet-testing-policy-tests = { path = "../crates/bitnet-testing-policy-tests", version = "0.2.0" }
bitnet-test-support = { workspace = true }

# System information
num_cpus = "1.17.0"

# Serialization and configuration
serde = { version = "1.0.228", features = ["derive"] }
serde_json.workspace = true
serde_yaml = { workspace = true }
toml = "0.9.8"

# HTTP client for fixture downloads
reqwest = { version = "0.12.24", features = ["json", "stream"] }

# Cryptography for checksums
digest = "0.10.7"
sha2 = { version = "0.10.9", features = ["std"] }

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# System utilities
regex = "1.12.2"
walkdir = "2.5.0"
dirs = "6.0.0"

# Testing utilities
env_logger = "0.11.8"
tempfile = "3.23.0"
assert_cmd = "2.1.1"
predicates = "3.1.3"
serial_test.workspace = true
temp-env.workspace = true

# Random number generation
fastrand = "2.3.0"
rand = "0.9.2"

# Parallel processing
rayon = "1.11.0"

# Date and time utilities
chrono = { workspace = true, features = ["serde"] }

# Command line argument parsing
clap = { workspace = true, features = ["derive"] }

# HTML escaping for reports
html-escape = "0.2.13"

# XML generation for JUnit reports
xml-rs = "1.0.0"

# System interface for all platforms
libc = "0.2.177"

# Compression for cache
flate2 = "1.1.5"

# Coverage reporting
cargo_metadata = "0.23.1"

# File timestamp manipulation
filetime = "0.2.26"

# bitnet-rs crates for cross-validation
bitnet-common = { path = "../crates/bitnet-common" }
bitnet-inference = { path = "../crates/bitnet-inference", default-features = false, features = ["cpu", "rt-tokio"] }
bitnet-models = { path = "../crates/bitnet-models" }
bitnet-quantization = { path = "../crates/bitnet-quantization" }
bitnet-kernels = { path = "../crates/bitnet-kernels" }
bitnet-tokenizers = { path = "../crates/bitnet-tokenizers" }
bitnet-compat = { path = "../crates/bitnet-compat" }
bitnet-honest-compute = { path = "../crates/bitnet-honest-compute" }
bitnet-sampling = { path = "../crates/bitnet-sampling" }
bitnet-device-probe = { path = "../crates/bitnet-device-probe" }
bitnet-logits = { path = "../crates/bitnet-logits" }
bitnet-generation = { path = "../crates/bitnet-generation" }
bitnet-engine-core = { path = "../crates/bitnet-engine-core" }
bitnet-gguf = { path = "../crates/bitnet-gguf" }
bitnet-prompt-templates = { path = "../crates/bitnet-prompt-templates" }
bitnet-receipts = { path = "../crates/bitnet-receipts" }
bitnet = { path = "../", default-features = false, features = ["cpu"] }
bitnet-crossval = { path = "../crossval", package = "bitnet-crossval" }

# Additional dependencies for fixtures
bincode = "2.0.1"
byteorder = "1.5.0"

# Platform-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "psapi", "fileapi", "minwindef"] }

[dev-dependencies]
# Test helper dependencies
fastrand = "2.3.0"
filetime = "0.2.26"
html-escape = "0.2.13"
serde = { version = "1.0.228", features = ["derive"] }
libc = "0.2.177"
